# fahrtenbuch

./: .gitignore  README.md  compose.yaml.example  justfile
backend/: .env.example  .gitignore  .replit  Cargo.toml  Dockerfile  compose-dev.yml  justfile  package.json  pnpm-lock.yaml  replit.nix
backend/migrations/: 00001_create_users.sql  00001_create_users_table.sql  00002_create_fuel.sql  00003_create_vehicles.sql  00004_create_sessions.sql  00005_create_payments.sql  00006_create_trip_route.sql  00007_create_trip_templates.sql  00008_create_trip.sql  00009_create_passengers.sql
backend/src/: main.rs
backend/src/data_models/: fuel.rs  mod.rs  passenger.rs  payment.rs  route.rs  session.rs  trip.rs  trip_route.rs  trip_template.rs  user.rs  vehicle.rs
backend/src/routes/: mod.rs  status.rs
backend/src/routes/fuel/: insert_fuel_price.rs  mod.rs
backend/src/routes/setup/: create_initial_user.rs  mod.rs
backend/src/routes/stats/: mod.rs  user_count.rs
backend/src/routes/user/: get_session.rs  invalidate_all_sessions.rs  invalidate_session.rs  login.rs  mod.rs  verify_session.rs
backend/src/util/: mod.rs  password.rs  user.rs
backend/src/util/fuel/: insert_price.rs  mod.rs
backend/src/util/user/: check_username.rs  count.rs  get_session.rs  insert.rs  invalidate_all_sessions.rs  invalidate_session.rs  login.rs  mod.rs  new_session.rs  verify_session.rs
frontend/: Dockerfile  astro.config.mjs  biome.json  nuxt.config.ts  package.json  pnpm-lock.yaml  tailwind.config.js  tailwind.config.mjs
frontend/components/: MyIconButton.vue  (+1 more)
notes/: features.md
(+15 files in other folders)
