[package]
name = "backend"
description = "Backend Server for Fahrtenbuch"
authors = ["AstragoDE <51675359+AstragoDE@users.noreply.github.com>"]
version = "0.1.0"
edition = "2021"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# ===== PROFILES =====

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 2

[profile.release]
opt-level = 3

[profile.release.package."*"]
opt-level = 3


# ===== DEPENDENCIES =====

[dependencies]
argon2 = "0.5.3"
axum = "0.7.6"
chrono = { version = "0.4.38", features = ["serde"] }
dotenvy = "0.15.7"
regex = "1.10.6"
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
sqlx = { version = "0.8.2", features = [
    "postgres",
    "runtime-tokio-rustls",
    "macros",
    "chrono",
    "uuid",
] }
tokio = { version = "1.40.0", features = ["full"] }
tower-http = { version = "0.6.1", features = ["full"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
uuid = { version = "1.10.0", features = ["serde"] }
